--- a/tehsil.html
+++ b/tehsil.html
@@ -114,12 +114,12 @@
                         <form action="#" class="toggleInput" style="display: none;">
                             <input type="text" class="search-input" placeholder="Search">
                         </form>
-                        <a href="#" class="hover-cc primary toggleInput">
-                            Sizin Maliyyə Sabitliyiniz
-                            <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
-                            <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
-                            </a>
-                            <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
+                        <span href="#" style="font-size: 20px;" class=" primary toggleInput">
+                            Sizin Maliyyə Sabitliyiniz</span>
+                        <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+                        <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
+                        </a>
+                        <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
                     </div>
                 </div>
             </div>
@@ -398,7 +398,7 @@
                     <div class=" d-flex align-items-center">
                         <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
-                            Xidmətlərimiz
+                            Sahələr
                         </p>
                         <p class="fs-1-9 primary hover-cc custom-before">Təhsil</p>
                     </div>
@@ -417,92 +417,8 @@
         <section id="service-panel" class="py-5 mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-2">
-                        <div class="wrapper flex flex-column">
-                            <div class="fs-2-5 my-3">Xidmətlərimiz</div>
 
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    Vergi
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi auditi
-                                    xidmətləri</a>
-                                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    məsləhət
-                                    xidmətləri</a>
-                                <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    planlaması
-                                    xidmətləri</a>
-                                <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    sahəsində sair
-                                    xidmətlər</a>
-                            </div>
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center mt-3">
-                                <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    Muhasibatlıq
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./services-accountment-1.html"
-                                    class="primary hover-cc fs-1-7 fw-600 my-3">Muhasibat uçotunun
-                                    aparılması üzrə autsors
-                                    xidməti</a>
-                                <a href="./services-accountment-2.html"
-                                    class="primary hover-cc  fs-1-7 fw-600 my-3">Maliyyə uçotunun
-                                    aparılması üzrə autsors
-                                    xidmətləri</a>
-                                <a href="./services-accountment-3.html"
-                                    class="primary hover-cc fs-1-7 fw-600 my-3">Şirkət rəhbərliyinə
-                                    xərclər və gəlirlilik haqqında
-                                    hesabatların hazırlanması</a>
-                            </div>
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    Gömrük Xidmətləri
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu my-2">
-                                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
-                                    ticarət və
-                                    gömrük xidmətləri</a>
-                            </div>
-
-
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    Audit Xidmətləri
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./audit-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    hesabatlarının
-                                    auditi</a>
-                                <a href="./audit-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə
-                                    hesabatlarının
-                                    auditi</a>
-                                <a href="./audit-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
-                                    qiymətləndirilməsinin auditi</a>
-                                <a href="./audit-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə
-                                    kapitalının
-                                    formalaşdırılmasın auditi</a>
-                            </div>
-
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    <a href="./services-advisory.html"
-                                        class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
-                                </p>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-9">
+                    <div class="col-12 col-lg-12">
                         <div class="service-card-container d-flex flex-wrap">
                             <div class="main-card">
                                 <p class="fs-2 fw-500 ls-2 primary">Təhsil</p>
