--- a/careers-values.html
+++ b/careers-values.html
@@ -114,12 +114,12 @@
                         <form action="#" class="toggleInput" style="display: none;">
                             <input type="text" class="search-input" placeholder="Search">
                         </form>
-                        <a href="#" class="hover-cc primary toggleInput">
-                            Sizin Maliyyə Sabitliyiniz
-                            <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
-                            <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
-                            </a>
-                            <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
+                        <span href="#" style="font-size: 20px;" class=" primary toggleInput">
+                            Sizin Maliyyə Sabitliyiniz</span>
+                        <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+                        <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
+                        </a>
+                        <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
                     </div>
                 </div>
             </div>
