--- a/services-tax-2.html
+++ b/services-tax-2.html
@@ -112,12 +112,12 @@
             <form action="#" class="toggleInput" style="display: none;">
               <input type="text" class="search-input" placeholder="Search">
             </form>
-            <a href="#" class="hover-cc primary toggleInput">
-              Sizin Maliyyə Sabitliyiniz
-              <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
-              <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
-              </a>
-              <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
+            <span href="#" style="font-size: 20px;" class=" primary toggleInput">
+              Sizin Maliyyə Sabitliyiniz</span>
+            <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+            <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
+            </a>
+            <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
           </div>
         </div>
       </div>
@@ -416,6 +416,25 @@
           <div class="col-12 col-lg-2">
             <div class="wrapper flex flex-column">
               <div class="fs-2-5 my-3">Xidmətlərimiz</div>
+              <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                  Audit Xidmətləri
+                </p>
+                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+              </div>
+              <div class="nav-drop-menu d-flex flex-column my-3">
+                <a href="./audit-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
+                  hesabatlarının
+                  auditi</a>
+                <a href="./audit-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə
+                  hesabatlarının
+                  auditi</a>
+                <a href="./audit-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
+                  qiymətləndirilməsinin auditi</a>
+                <a href="./audit-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə
+                  kapitalının
+                  formalaşdırılmasın auditi</a>
+              </div>
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
@@ -424,13 +443,22 @@
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
               <div class="nav-drop-menu d-flex flex-column my-3">
-                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi auditi xidmətləri</a>
-                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi məsləhət
+                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi auditi
                   xidmətləri</a>
-                <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi planlaması
+                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
+                  məsləhət
                   xidmətləri</a>
-                <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi sahəsində sair
+                <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
+                  planlaması
+                  xidmətləri</a>
+                <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
+                  sahəsində sair
                   xidmətlər</a>
+              </div>
+              <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                  <a href="./services-advisory.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
+                </p>
               </div>
               <div class="nav-wrapper d-flex justify-content-between align-items-center mt-3">
                 <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
@@ -456,34 +484,10 @@
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
               <div class="nav-drop-menu my-2">
-                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici ticarət və
+                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
+                  ticarət və
                   gömrük xidmətləri</a>
               </div>
-
-
-              <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                  Audit Xidmətləri
-                </p>
-                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-              </div>
-              <div class="nav-drop-menu d-flex flex-column my-3">
-                <a href="./audit-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi hesabatlarının
-                  auditi</a>
-                <a href="./audit-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə hesabatlarının
-                  auditi</a>
-                <a href="./audit-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
-                  qiymətləndirilməsinin auditi</a>
-                <a href="./audit-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə kapitalının
-                  formalaşdırılmasın auditi</a>
-              </div>
-
-              <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                  <a href="./services-advisory.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
-                </p>
-              </div>
-
             </div>
           </div>
           <div class="col-12 col-lg-7 text-area pl-80">
