--- a/careers-values.html
+++ b/careers-values.html
@@ -84,9 +84,9 @@
                     <form action="#" class="toggleInput" style="display: none;">
                         <input type="text" class="search-input" placeholder="Search">
                     </form>
-                    <a href="#" class="hover-cc primary toggleInput">
+                    <!-- <a href="#" class="hover-cc primary toggleInput">
                         Find your local member firm
-                    </a>
+                    </a> -->
                     <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
                     <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a>
                     <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
@@ -432,11 +432,12 @@
 
                         <div class="nav-wrapper d-flex justify-content-between align-items-center">
                             <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                Students
+                                <a href="./student-career-1.html" class="primary hover-cc fs-1-9 my-3">Yeni
+                                    məzun</a>
                             </p>
-                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                            <!-- <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i> -->
                         </div>
-                        <div class="nav-drop-menu d-flex flex-column my-3">
+                        <!-- <div class="nav-drop-menu d-flex flex-column my-3">
                             <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Graduate Fabio
                                 Luis de
                                 Sousa</a>
@@ -444,15 +445,17 @@
                                 Bishop</a>
                             <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Graduate -
                                 Shannon Tan</a>
-                        </div>
+                        </div> -->
+
 
                         <div class="nav-wrapper d-flex justify-content-between align-items-center">
                             <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                Experienced hires
+                                <a href="./student-career-2.html" class="primary hover-cc fs-1-9 my-3">Təcrübəli
+                                    əməkdaş</a>
                             </p>
-                            <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                            <!-- <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i> -->
                         </div>
-                        <div class="nav-drop-menu d-flex flex-column my-3">
+                        <!-- <div class="nav-drop-menu d-flex flex-column my-3">
                             <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced
                                 hires - Tony
                                 Windle</a>
@@ -462,15 +465,15 @@
                             <a href="./student-career.html" class="primary hover-cc fs-1-7 fw-600 my-3">Experienced Hire
                                 - Sara Jane
                                 Knox</a>
-                        </div>
-                        <!-- <div class="wrapper flex flex-column">
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <a href="./student-career.html"
-                                    class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    FAQ
-                                </a>
-                            </div>
                         </div> -->
+                        <!-- <div class="wrapper flex flex-column">
+                <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                    <a href="./student-career.html"
+                        class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
+                        FAQ
+                    </a>
+                </div>
+            </div> -->
 
                     </div>
                     <div class="col-12 col-lg-9">
