--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           <form action="#" class="toggleInput" style="display: none;">
             <input type="text" class="search-input" placeholder="Search">
           </form>
-          <a href="#" class="hover-cc primary toggleInput">
+          <!-- <a href="#" class="hover-cc primary toggleInput">
             Find your local member firm
-          </a>
+          </a> -->
           <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
           <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a>
           <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
@@ -652,8 +652,8 @@
     <section id="news">
       <div class="container">
         <div class="row px-0 mx-0">
-          <div class="col-12 mb-5">
-            <p class="fs-3 fw-600">Xəbərlər</p>
+          <div class="col-12">
+            <p class="fs-3 fw-600 mobile-30-mt">Xəbərlər</p>
           </div>
           <div class="col-12 col-lg-4">
             <div class="news-card">
