--- a/news.html
+++ b/news.html
@@ -84,9 +84,9 @@
                     <form action="#" class="toggleInput" style="display: none;">
                         <input type="text" class="search-input" placeholder="Search">
                     </form>
-                    <a href="#" class="hover-cc primary toggleInput">
+                    <!-- <a href="#" class="hover-cc primary toggleInput">
                         Find your local member firm
-                    </a>
+                    </a> -->
                     <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
                     <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a>
                     <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
@@ -421,8 +421,8 @@
                     <div class="col-12 col-lg-12">
                         <div class="service-card-container d-flex flex-wrap">
                             <div class="main-card">
-                                <p class="fs-2 fw-500 ls-2 primary">Xəbərlər</p>
-                                <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p>
+                                <!-- <p class="fs-2 fw-500 ls-2 primary">Xəbərlər</p>
+                                <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p> -->
                             </div>
                             <!-- <div class="side-card ">
                 <div class="card-info">
