--- a/team.html
+++ b/team.html
@@ -81,9 +81,9 @@
           <form action="#" class="toggleInput" style="display: none;">
             <input type="text" class="search-input" placeholder="Search">
           </form>
-          <a href="#" class="hover-cc primary toggleInput">
+          <!-- <a href="#" class="hover-cc primary toggleInput">
             Find your local member firm
-          </a>
+          </a> -->
           <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
           <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i></a>
           <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
