--- a/blog-1.html
+++ b/blog-1.html
@@ -505,7 +505,7 @@
                     <div class="col-12 col-lg-9 ">
                         <div class="service-card-container d-flex flex-wrap">
                             <div class="main-card">
-                                <p class="fs-2 fw-500 ls-2 primary">Bloq</p>
+                                <!-- <p class="fs-2 fw-500 ls-2 primary">Bloq</p> -->
                             </div>
 
                             <p class="fw-600 fs-3 main-title my-5">
