--- a/foreign-custom.html
+++ b/foreign-custom.html
@@ -527,30 +527,34 @@
                     <div class="col-12 col-lg-3">
                         <div class="related-articles ">
                             <div class="fs-2-5 fw-600 ls-2">
-                                Bənzər Xəbərlər
+                                E-Nəşr
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 1</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="news.html"
+                                <div class="darkgray fs-1-9 ls-2 my-2">Vergi</div>
+                                <p class="fs-2 ls-2 my-3 fw-600">Əmək haqqının uçotu qrupunun üzləşdiyi çətinliklər
+                                    hansılardır?</p>
+                                <a href="blog-1.html"
                                     class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
                                     <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                                     <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
                                 </a>
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 2</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="news.html"
+                                <div class="darkgray fs-1-9 ls-2 my-2">Biznes</div>
+                                <p class="fs-2 ls-2 my-3 fw-600">Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizin
+                                    böyüməsini necə kömək edə bilər?</p>
+                                <a href="blog-2.html"
                                     class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
                                     <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                                     <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
                                 </a>
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2"> Xəbərlər 3</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="news.html"
+                                <div class="darkgray fs-1-9 ls-2 my-2">
+                                    Audit
+                                </div>
+                                <p class="fs-2 ls-2 my-3 fw-600"> Auditdə analitikanın əhəmiyyəti nədir?</p>
+                                <a href="blog-3.html"
                                     class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
                                     <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                                     <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
